@@ -1,3 +1,4 @@
+	* fixed default values being set incorrectly in add_torrent_params through add_magnet_uri in python bindings
 	* implemented unaligned write (for unbuffered I/O)
 	* fixed broadcast_lsd option
 	* fixed udp-socket race condition when using a proxy
